force-app/main/default/objects/pymts__Account_Credit__c/fields/pymts__Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>pymts__Original_Amount__c</fullName>
    <description>Original credit amount</description>
    <label>Original Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>