force-app/main/default/objects/pymts__Account_Credit__c/fields/pymts__Source_Transaction__c.field-meta.xml
<CustomField>
    <fullName>pymts__Source_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The transaction that created this credit (from overpayment)</description>
    <label>Source Transaction</label>
    <referenceTo>pymts__Transaction__c</referenceTo>
    <relationshipLabel>Account Credits</relationshipLabel>
    <relationshipName>Account_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>